# IMAPServer-rs

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  run.sh  windows_thunderbird_debug.cmd
.github/: FUNDING.yml
.github/workflows/: rust.yml
ci/: before_deploy.ps1  before_deploy.sh  install.sh
cli/: Cargo.toml
cli/src/: main.rs
database/: Cargo.toml
database/src/: lib.rs
database/src/mailbox/: mod.rs
examples/: imap.service
imap-server/: Cargo.toml
imap-server/src/: main.rs  passwords.rs
imap-server/src/cli/: mod.rs
imap-server/src/database/: mod.rs
imap-server/src/server/: mod.rs
imap-server/src/server/parser/: mod.rs
migrations/2019-11-03-180513_user/: up.sql
shared/: Cargo.toml
shared/migrations/2019-11-03-180513_user/: up.sql
shared/src/: lib.rs  models.rs  schema.rs  tests.rs
shared/src/config/: mod.rs
shared/src/mailbox/: mod.rs
src/: commands.rs  config.rs  database.rs  helper.rs  log_helper.rs  macros.rs  main.rs  models.rs  request.rs  response.rs  schema.rs
src/commands/: authenticate.rs  mod.rs
src/mailbox/: mod.rs
src/server/: codec.rs  mod.rs  proto.rs  service.rs
