[package]
name = "IMAPServer"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
description = "A Basic IMAP Server written in Rust (WIP)"
repository = "https://github.com/Nordgedanken/IMAPServer-rs.git"
readme = "README.md"
documentation = "https://docs.rs/crate/IMAPServer/"
keywords = ["imap","tcp", "server", "bin", "email"]
categories = ["email", "network-programming"]
license = "GPL-3.0"
edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
app_dirs = "1.2.1"
futures-preview = "=0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"
bytes = "0.4.12"
mailparse = "0.9.2"
base64 = "0.11.0"
log = "0.4"
fern = {version = "0.5", features = ["colored"]}
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"
diesel = { version = "1.0.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
easy_password = "0.1.2"
rand = { version = "0.7", features = ["log"] }
