[package]
name = "IMAPServer"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
description = "A Basic IMAP Server written in Rust (WIP)"
repository = "https://github.com/Nordgedanken/IMAPServer-rs.git"
readme = "README.md"
documentation = "https://docs.rs/crate/IMAPServer/"
keywords = ["imap","tcp", "server", "bin", "email"]
categories = ["email", "network-programming"]
license = "GPL-3.0"
edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
app_dirs = "1.2.1"
futures = {version = "0.3", features=["compat"]}
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
#tokio-io = "0.2.0-alpha.6"
bytes = "0.5.3"
mailparse = "0.10.1"
base64 = "0.11.0"
log = "0.4"
fern = {version = "0.5", features = ["colored"]}
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

[dependencies.IMAPServer-shared]
path = "shared"

[workspace]
members = ["shared", "cli"]
