[package]
name = "IMAPServer"
version = "0.2.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
description = "A Basic IMAP Server written in Rust (WIP)"
repository = "https://github.com/Nordgedanken/IMAPServer-rs.git"
readme = "README.md"
documentation = "https://docs.rs/crate/IMAPServer/"
keywords = ["imap","tcp", "server", "bin", "email"]
categories = ["email", "network-programming"]
license = "GPL-3.0"
edition = "2018"

include = [
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
futures = {version = "0.3", features=["compat"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.6", features = ["codec"] }
bytes = "1"
mailparse = "0.13.0"
base64 = "0.12.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"]}
serde_yaml = "0.8"

[dependencies.IMAPServer-shared]
path = "shared"
version = "0.1.0"

[workspace]
members = ["shared", "cli"]
