[package]
name = "IMAPServer-CLI"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

[dependencies]
futures = {version = "0.3", features=["compat"]}
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
#tokio-io = "0.2.0-alpha.6"
log = "0.4"
fern = {version = "0.5", features = ["colored"]}
chrono = "0.4"
clap = "2.33.0"

[dependencies.IMAPServer-shared]
path = "../shared"

[[bin]]
name = "mailbox-cli"
path = "src/main.rs"
