[package]
name = "imap-server"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full", "tracing"] }
tokio-util = { version = "0.6.0", features = ["full"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3.0", features = ["thread-pool"]}
async-stream = "0.3"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2.4"
color-eyre = "0.5"
thiserror = "1.0"
clap = "3.0.0-beta.2"
base64 = "0.13.0"