[package]
name = "IMAPServer-shared"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"

[lib]
doc = true
test = true

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"
futures-preview = "=0.3.0-alpha.19"
tokio = "0.2.0-alpha.6"
tokio-io = "0.2.0-alpha.6"
log = "0.4"
dotenv = "0.15.0"
argonautica = { version = "0.2", features = ["simd"] }
rand  = { version = "0.7", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
