[package]
name = "IMAPServer-shared"
version = "0.1.0"
authors = ["MTRNord <mtrnord1@gmail.com>"]
edition = "2018"
description = "A shared module for the IMAPServer crate and it's cli"
repository = "https://github.com/Nordgedanken/IMAPServer-rs.git"
keywords = ["imap","tcp", "server", "bin", "email"]
categories = ["email", "network-programming"]
license = "GPL-3.0"

[lib]
doc = true
test = true

[dependencies]
diesel = { version = "1.0.0", features = ["sqlite"] }
diesel_migrations = "1.4.0"
futures = {version = "0.3", features=["compat"]}
tokio = { version = "0.2", features = ["full"] }
tokio-util = { version = "0.2", features = ["codec"] }
#tokio-io = "0.2.0-alpha.6"
log = "0.4"
dotenv = "0.15.0"
argonautica = { version = "0.2", features = ["simd"] }
rand  = { version = "0.7", features = ["log"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
